--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "start-kit",
   "version": "1.0.0",
-  "description": "",
+  "description": "**Студент**: Суров Константин",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +19,7 @@
     "gulp-webpack": "^1.5.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0"
+  },
+  "dependencies": {
   }
 }
